--- a/T-Shop/Resources/OrderCanceled.html
+++ b/T-Shop/Resources/OrderCanceled.html
@@ -91,16 +91,16 @@
                                 <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:600px;">
                                     <tr>
                                         <td align="center" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 25px;">
-                                            <img src="https://cdn-icons-png.freepik.com/256/11450/11450152.png" width="125" height="120" style="display: block; border: 0px;" /><br>
+                                            <img src="https://static.vecteezy.com/system/resources/previews/017/350/109/original/red-cross-button-in-round-shape-png.png" width="125" height="120" style="display: block; border: 0px;" /><br>
                                             <h2 style="font-size: 30px; font-weight: 800; line-height: 36px; color: #333333; margin: 0;">
-                                                Thank You For Your Order!
+                                                Order Canceled!
                                             </h2>
                                         </td>
                                     </tr>
                                     <tr>
                                         <td align="left" style="font-family: Open Sans, Helvetica, Arial, sans-serif; font-size: 16px; font-weight: 400; line-height: 24px; padding-top: 10px;">
                                             <p style="font-size: 16px; font-weight: 400; line-height: 24px; color: #777777;">
-                                                Here is your bill:
+                                                You will receive your refund from us within 1-3 days.
                                             </p>
                                         </td>
                                     </tr>
